Bug 946632 - Don't scroll vertically by mouse-wheel on a single-line text control. r=bz